5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1716_2496.log
== TEST (2019-05-09 13:09:54) 
-- CODE:

x = int(input("Num: "))

while not  (x == -1):
	x == x + x
	x = int(input("Num: "))
print (x)	
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:11:41) 
-- CODE:

x = int(input("Num: "))

while not  (x == -1):
	x == x + x
	x = int(input("Num: "))
	print(x)
-- OUTPUT:
1075
333
-9
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:13:08) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	x = x + x
	x = int(input("Num: "))
	print(x)
-- OUTPUT:
1075
333
-9
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:14:32) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = x
	x = y + x
	y = int(input("Num: "))
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:14:46) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = x
	x = y + x
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:15:02) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = x
	x = y + x
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:15:19) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:15:24) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:15:32) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:15:36) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 13:15:58) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):1
	y = int(input("Num: "))
	x = y + x
	print(x)
-- EXECUTION TIME:
0.185042
-- ERROR:
  File "/home/codebench/codes/1716/2496/main.py", line 5
    y = int(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:16:13) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):1
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
File "XXXX", line 5
    y = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:16:30) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):1
	x = int(input("Num: "))
	x = x + x
	print(x)
-- ERROR:
File "XXXX", line 5
    x = int(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:16:34) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	x = int(input("Num: "))
	x = x + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:16:56) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	x = int(input("Num: "))
	x = x + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:17:04) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	x = int(input("Num: "))
	x = x + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:17:22) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	x = int(input("Num: "))
	x = x + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 13:17:39) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	x = int(input("Num: "))
	x = x + x
	print(x)
-- EXECUTION TIME:
0.139016
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:18:08) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	x = int(input("Num: "))
	
	print(x)
-- OUTPUT:
1075
333
-9
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:20:03) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:20:03) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:20:08) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:20:11) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	
	y = int(input("Num: "))
	x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:21:18) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = int(input("Num: "))
	if not (y == -1)
	x = y + x
	print(x)
-- ERROR:
File "XXXX", line 6
    if not (y == -1)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:21:24) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = int(input("Num: "))
	if not (y == -1):
	x = y + x
	print(x)
-- ERROR:
File "XXXX", line 7
    x = y + x
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:21:48) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = int(input("Num: "))
	if not (y == -1):
	   x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:21:54) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = int(input("Num: "))
	if not (y == -1):
	   x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 13:21:55) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = int(input("Num: "))
	if not (y == -1):
	   x = y + x
	print(x)
-- EXECUTION TIME:
0.128021
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2496/main.py", line 5, in <module>
    y = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:22:00) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = int(input("Num: "))
	if not (y == -1):
	   x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 13:22:11) 
-- CODE:

x = int(input("Num: "))

while not (x == -1):
	y = int(input("Num: "))
	if not (y == -1):
	   x = y + x
	print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    y = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:30:42) 
-- CODE:
x = int(input("Num: "))

while not (x == -1):
	y = int(input("Num: "))
   x = y + x
	print(x)
-- ERROR:
File "XXXX", line 5
    x = y + x
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:32:22) 
-- CODE:
x = int(input("Num: "))

while not (x == -1):
	x = int(input("Num: "))
   x = x + x
	print(x)
-- ERROR:
File "XXXX", line 5
    x = x + x
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:33:03) 
-- CODE:
x = int(input("Num: "))

while not (x == -1):
	
	x = int(input("Num: "))
	 x = x + y
   
	print(x)
-- ERROR:
File "XXXX", line 6
    x = x + y
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:06) 
-- CODE:
x = int(input("Num: "))
a = x 

while not (x == -1):
	x = int(input("Num: "))
	x = x + a
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:16) 
-- CODE:
x = int(input("Num: "))
a = x 

while not (x == -1):
	x = int(input("Num: "))
	x = x + a
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:34:40) 
-- CODE:
x = int(input("Num: "))
a = x 

while not (x == -1):
	x = int(input("Num: "))
	x = x + a
print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:08) 
-- CODE:
x = int(input("Num: "))
a = x 

while not (x == -1):
	x = int(input("Num: "))
	x = x + a
   
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:35:27) 
-- CODE:
x = int(input("Num: "))
a = x 

while not (x == -1):
	x = int(input("Num: "))
	a = x 
	x = x + a
   
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:00) 
-- CODE:
x = int(input("Num: "))

while not (x == -1):
	x = int(input("Num: "))
	x = x + x
   
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:36:50) 
-- CODE:
x = int(input("Num: "))

while not (x == -1):
	a = int(input("Num: "))
	x = x + a
   
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:39:02) 
-- CODE:
x = int(input("Num: "))

while not (x == -1) or (a == -1):
	
	a = int(input("Num: "))
	
	x = x + a
   
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    a = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:39:29) 
-- CODE:
x = int(input("Num: "))

while not (x == -1) :
	
	
	
	x = x + a
   
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    x = x + a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:39:39) 
-- CODE:
x = int(input("Num: "))
x = a 

while not (x == -1) :
	
	
	
	x = x + a
   
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    x = a 
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:39:57) 
-- CODE:
x = int(input("Num: "))


while not (x == -1) :
	x = a 
	
	
	
	x = x + a
   
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    x = a 
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:40:08) 
-- CODE:
x = int(input("Num: "))


while not (x == -1) :

	x = x + a
   
	print ( x)
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    x = x + a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:40:18) 
-- CODE:
x = int(input("Num: "))


while not (x == -1) :

	x = x + x
   
	print ( x)
	
-- OUTPUT:
-1050
-2100
-4200
-8400
-16800
-33600
-67200
-134400
-268800
-537600
-1075200
-2150400
-4300800
-8601600
-17203200
-34406400
-68812800
-137625600
-275251200
-550502400
-1101004800
-2202009600
-4404019200
-8808038400
-17616076800
-35232153600
-70464307200
-140928614400
-281857228800
-563714457600
-1127428915200
-2254857830400
-4509715660800
-9019431321600
-18038862643200
-36077725286400
-72155450572800
-144310901145600
-288621802291200
-577243604582400
-1154487209164800
-2308974418329600
-4617948836659200
-9235897673318400
-18471795346636800
-36943590693273600
-73887181386547200
-147774362773094400
-295548725546188800
-591097451092377600
-1182194902184755200
-2364389804369510400
-4728779608739020800
-9457559217478041600
-18915118434956083200
-37830236869912166400
-75660473739824332800
-151320947479648665600
-302641894959297331200
-605283789918594662400
-1210567579837189324800
-2421135159674378649600
-4842270319348757299200
-9684540638697514598400
-19369081277395029196800
-38738162554790
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:42:59) 
-- CODE:
x = int(input("Num: "))

t = 0

while not (x == -1) :

	x = x + t
   
	print ( x)
	
-- OUTPUT:
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
-525
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:48:22) 
-- CODE:
x = int(input("Num: "))

t = 0

while not (x == -1) :
   print(x)
	x = x + t
   
	
	
-- ERROR:
File "XXXX", line 7
    x = x + t
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:48:31) 
-- CODE:
x = int(input("Num: "))

t = 0

while not (x == -1) :
   print(x)
	x = x + x
   
	
	
-- ERROR:
File "XXXX", line 7
    x = x + x
            ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:48:53) 
-- CODE:
x = int(input("Num: "))

t = 0

while not (x == -1) :
   print(x)
	x = a
	x = x + a

	
	
-- ERROR:
File "XXXX", line 7
    x = a
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:49:11) 
-- CODE:
x = int(input("Num: "))

t = 0

while not (x == -1) :
	print(x)
	
	x = a
	
	x = x + a

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x = a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:49:24) 
-- CODE:
x = int(input("Num: "))

t = 0

while not (x == -1) :
	print(x)
	
	x == a
	
	x = x + a

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x == a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:49:41) 
-- CODE:
x = int(input("Num: "))

x = a

while not (x == -1) :
	print(x)
	
	 
	
	x = x + a

	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:50:07) 
-- CODE:
x = int(input("Num: "))

a = x

while not (x == -1) :
	print(x)	 
	x = x + a

	
	
-- OUTPUT:
-525
-1050
-1575
-2100
-2625
-3150
-3675
-4200
-4725
-5250
-5775
-6300
-6825
-7350
-7875
-8400
-8925
-9450
-9975
-10500
-11025
-11550
-12075
-12600
-13125
-13650
-14175
-14700
-15225
-15750
-16275
-16800
-17325
-17850
-18375
-18900
-19425
-19950
-20475
-21000
-21525
-22050
-22575
-23100
-23625
-24150
-24675
-25200
-25725
-26250
-26775
-27300
-27825
-28350
-28875
-29400
-29925
-30450
-30975
-31500
-32025
-32550
-33075
-33600
-34125
-34650
-35175
-35700
-36225
-36750
-37275
-37800
-38325
-38850
-39375
-39900
-40425
-40950
-41475
-42000
-42525
-43050
-43575
-44100
-44625
-45150
-45675
-46200
-46725
-47250
-47775
-48300
-48825
-49350
-49875
-50400
-50925
-51450
-51975
-52500
-53025
-53550
-54075
-54600
-55125
-55650
-56175
-56700
-57225
-57750
-58275
-58800
-59325
-59850
-60375
-60900
-61425
-61950
-62475
-63000
-63525
-64050
-64575
-65100
-65625
-66150
-66675
-67200
-67725
-68250
-68775
-69300
-69825
-70350
-70875
-71400
-71925
-72450
-72975
-73500
-74025
-74550
-75075
-75600
-76125
-7665
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:51:10) 
-- CODE:
x = int(input("Num: "))

a = x

while not (x == -1) :
	print(x)	 
	x = x + a
	x = int(input("Num: "))

	
	
-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:51:34) 
-- CODE:
x = int(input("Num: "))

a = x

while not (x == -1) :	 
	x = x + a
	print(x)	
	x = int(input("Num: "))

	
	
-- OUTPUT:
-1050
550
-192
-534
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:52:04) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	print(x)	
	x = int(input("Num: "))

	
	
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:52:18) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	print(x)	
	x = int(input("Num: "))

	
	
-- EXECUTION TIME:
0.548115
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-1050
2150
666
-18
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
0
0
0
0
0
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
21906
65306
-21906
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:52:18) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	print(x)	
	x = int(input("Num: "))

	
	
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:53:21) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	
	x = int(input("Num: "))
print(x)		

	
	
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:53:47) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	
	x = int(input("Num: "))
   print(x)		

	
	
-- ERROR:
File "XXXX", line 10
    print(x)		
             ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:53:54) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	
	x = int(input("Num: "))
   print(x)	

	
	
-- ERROR:
File "XXXX", line 10
    print(x)	
            ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:53:58) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	
	x = int(input("Num: "))
   print(x)

	
	
-- ERROR:
File "XXXX", line 10
    print(x)
           ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:54:10) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	print(x)	
	x = int(input("Num: "))
  
	
	
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:54:44) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	print(x)	
	x = int(input("Num: "))
  
	
	
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:57:36) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	print(a)	
	x = int(input("Num: "))

  
	
	
-- OUTPUT:
-525
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:57:48) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	a = x
	x = x + a
	print(x)	
	x = int(input("Num: "))

  
	
	
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:58:08) 
-- CODE:
x = int(input("Num: "))



while not (x == -1) :
	x = x + x
	print(x)	
	x = int(input("Num: "))

  
	
	
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:59:18) 
-- CODE:
x = int(input("Num: "))
a = x
while not (x == -1) :
	x = x + a
	print(x)	
	x = int(input("Num: "))

  
	
	
-- OUTPUT:
-1050
550
-192
-534
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 16:59:38) 
-- CODE:
x = int(input("Num: "))
a = x
while not (x == -1) :
	x = x + a
	print(x)	
	x = int(input("Num: "))

  
	
	
-- OUTPUT:
-1050
550
-192
-534
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:04:42) 
-- CODE:
x = int(input("Num: "))
a = x
while  (x != -1) :
	x = x + a
	print(x)	
	x = int(input("Num: "))

  
	
	
-- OUTPUT:
-1050
550
-192
-534
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:05:04) 
-- CODE:
x = int(input("Num: "))

while  (x != -1) :
	a = x
	x = x + a
	print(x)	
	x = int(input("Num: "))

  
	
	
-- OUTPUT:
-1050
2150
666
-18
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 17:09:21) 
-- CODE:
x = int(input("Num: "))

while  (x != -1) :
	a = a + x
	x = x + a
	print(x)	
	x = int(input("Num: "))

  
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    a = a + x
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:39:22) 
-- CODE:
x = int(input("Num: "))

while  (x != -1) :
	x = x + x
	x = int (input())
print(x)	
	

  
	
	
-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 16:40:36) 
-- CODE:
x = int(input("Num: "))
a = 0
while  (x != -1) :
	a = a + x
	x = int (input())
print(a)	
	

  
	
	
-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 16:40:42) 
-- CODE:
x = int(input("Num: "))
a = 0
while  (x != -1) :
	a = a + x
	x = int (input())
print(a)	
	

  
	
	
-- EXECUTION TIME:
0.194969
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
